--- a/Styles/form.css
+++ b/Styles/form.css
@@ -9,17 +9,37 @@ header{
     height: 160px;
     background-color: blanchedalmond;
 }
+h1{
+    text-align: center;
+    font-family: 'Lobster', cursive;
+    font-size: 48px;
+    font-weight: 200;
+    color: peru;
+}
+h2{
+    text-align: center;
+    font-family: 'Lobster', cursive;
+    font-size: 30px;
+    font-weight: 200;
+    color: peru;
+}
 nav{
     width: 100%;
     height: 50px;
     background-color:burlywood;
 }
+
 .menu{
+    list-style-type: none;
+    font-family: 'Raleway', sans-serif;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
+
 .form-container{
+    font-family: 'Raleway', sans-serif;
+    align-self: center;
     width: 300px;
     height: 400px;
     background-color: peru;
