--- a/Styles/form.css
+++ b/Styles/form.css
@@ -1,4 +1,5 @@
 body{
+    margin: 0px;
     position: relative;
     background-color: #FFF;
     display: flex;
@@ -6,8 +7,12 @@ body{
 }
 header{
     width: 100%;
-    height: 160px;
+    height: auto;
     background-color: blanchedalmond;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 h1{
     text-align: center;
@@ -27,21 +32,46 @@ nav{
     width: 100%;
     height: 50px;
     background-color:burlywood;
-}
-
-.menu{
-    list-style-type: none;
     font-family: 'Raleway', sans-serif;
     display: flex;
+    justify-content: center;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color:peru;
+  }
+
+.main-container{
+    border-style: hidden;
+    border-color: #FFF;
+    width: 100%;
+    height: 283px;
+    display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
 }
 
 .form-container{
+    width: 500px;
+    height: auto;
     font-family: 'Raleway', sans-serif;
-    align-self: center;
-    width: 300px;
-    height: 400px;
     background-color: peru;
 }
 form{
@@ -59,4 +89,21 @@ button{
     border-radius: 4px;
     background-color: blanchedalmond;
     color: peru;
+}
+.container-cat{
+    width: 272,5px;
+    height: 283px;
+}
+.container-cat img {
+    width: 100%;
+    height: 283px;
+}
+.container-dog{
+    width: 272,5px;
+    height: 283px;
+}
+
+.container-dog img{
+    width: 100%;
+    height: 283px;
 }
