--- a/Styles/form.css
+++ b/Styles/form.css
@@ -61,13 +61,21 @@ ul {
 
 .main-container{
     border-style: hidden;
-    border-color: #FFF;
     width: 100%;
-    height: 283px;
+    height: 310px;
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
+    background-color: #FFF;
 }
-
+.container-cat{
+    width: auto;
+    height: 310px;
+}
+.container-cat img {
+    width: 100%;
+    height: 310px;
+}
 .form-container{
     width: 500px;
     height: auto;
@@ -87,23 +95,17 @@ button{
     width: 90px;
     height: 30px;
     border-radius: 4px;
+    margin: 10px;
     background-color: blanchedalmond;
+    font-family: 'Raleway', sans-serif;
     color: peru;
 }
-.container-cat{
-    width: 272,5px;
-    height: 283px;
-}
-.container-cat img {
-    width: 100%;
-    height: 283px;
-}
 .container-dog{
-    width: 272,5px;
-    height: 283px;
+    width: auto;
+    height: 310px;
 }
 
 .container-dog img{
     width: 100%;
-    height: 283px;
+    height: 310px;
 }
