--- a/Styles/form.css
+++ b/Styles/form.css
@@ -6,7 +6,7 @@ body{
     flex-direction: column;
 }
 header{
-    width: 100%;
+    
     height: auto;
     background-color: blanchedalmond;
     display: flex;
@@ -109,3 +109,22 @@ button{
     width: 100%;
     height: 310px;
 }
+
+footer{
+    background-color: blanchedalmond;
+    height: 150px;
+    text-align: center;
+    font-family: 'Lobster', cursive;
+    font-size: 16px;
+    font-weight: 200;
+    color: peru;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-around;
+}
+
+.mail:hover {
+    background-color: peru;
+}
+    
