--- a/Styles/form.css
+++ b/Styles/form.css
@@ -33,6 +33,7 @@ nav{
     height: 50px;
     background-color:burlywood;
     font-family: 'Raleway', sans-serif;
+    font-size: 14px;
     display: flex;
     justify-content: center;
 }
@@ -70,12 +71,12 @@ ul {
 }
 .container-cat{
     width: auto;
-    height: 500px;
+    height: 520px;
 }
 .container-cat img {
     width: 100%;
-    height: 500px;
-}
+    height: 520px;
+}    
 .form-container{
     padding: 10px;
     width: 500px;
@@ -124,12 +125,12 @@ button:hover{
 }
 .container-dog{
     width: auto;
-    height: 500px;
+    height: 520px;
 }
 
 .container-dog img{
     width: 100%;
-    height: 500px;
+    height: 520px;
 }
 
 footer{
